	Adjust to the fact that ansi2knr is now hosted by Automake.
	* Makefile.am (cvs_files): Add install-sh and mkinstalldirs.
	* config/config.guess, config/mkinstalldirs, config/texinfo.tex:
	Update from masters.
	* lib/autoscan/Makefile.am (EXTRA_DIST, nodist_autoscanlib_DATA):
	autoscan.pre is not to be installed, and autoscan.list is not to
	be shipped.
	(CLEANFILES): Add autoscan.list.

2002-10-25  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (&load_configuration): Take the file as
	argument.
	(&parse_args): Handle -C, --cache.
	($help): Adjust.
	(MAIN): Load ~/.autom4te.cfg and ./.autom4te.cfg.
	* lib/autom4te.in (Autoconf): Pass --cache=autom4te.cache.
	* doc/autoconf.texi (Invoking autom4te): Document --cache.
	Now a subsection of...
	(Using autom4te): This new section.
	(Customizing autom4te): New.
	(autom4te.cache): Adjust.

2002-10-25  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Generic Headers): More information on how to
	use AC_CHECK_HEADERS.

2002-10-25  Akim Demaille  <akim@epita.fr>

	* bin/autoconf.as, bin/autoconf.in, bin/autoupdate.in ($help):
	Space changes.

2002-10-25  Akim Demaille  <akim@epita.fr>

	* bin/autoscan.in (output): Output AC_PREREQ.
	(%needed_macros): Add AC_PREREQ so that configure.ac without one
	be reported.

2002-10-23  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Particular Headers): In AC_HEADER_STDBOOL,
	document _Bool.

2002-10-23  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (handle_traces): Handle @&t@ in traces.
	Reported by Peter Eisentraut.

2002-10-23  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/headers.m4 (AC_HEADER_STDBOOL): Also look for the
	type _Bool.
	Fix a typo.
	* doc/autoconf.texi (Particular Headers): Adjust according to Paul
	Eggert's recommandations.

2002-10-22  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/headers.m4 (AC_HEADER_STDBOOL): New, based on CVS
	Bison, by Paul Eggert.
	* doc/autoconf.texi (Particular Headers): Document it.
